<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".SplashActivity">

    <TextView
        android:id="@+id/txtTopTitleCover"
        style="@style/Text_White_16"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/splash_top_title"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/view_top"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:background="@color/white60"
        app:layout_constraintTop_toBottomOf="@+id/txtTopTitleCover">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:src="@drawable/icon_book"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/title"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/Text_White_32"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:fontFamily="@font/water_splash"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtIntroduce"
        style="@style/Text_White_16"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="100dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/introduce"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@+id/divider" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:background="@color/white60"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toTopOf="@+id/txtAuthor"
        app:layout_constraintEnd_toEndOf="@id/txtIntroduce"
        app:layout_constraintStart_toStartOf="@id/txtIntroduce"/>

    <TextView
        android:id="@+id/txtAuthor"
        style="@style/Text_White_16"
        android:layout_width="match_parent"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/book_author"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>